deleted createModels rebuilt frontend services added service-parent made categoryController

--- a/recordbook/src/app/app.component.html
+++ b/recordbook/src/app/app.component.html
@@ -4,15 +4,15 @@
     Welcome to {{ title }}!
   </h1>
   <nav>
-    <a routerLink="/categories" routerLinkActive="active">Categories</a>
+    <a routerLink="/users" routerLinkActive="active">Users</a>
     |
-    <a routerLink="/events" routerLinkActive="active">Events</a>
+    <a routerLink="/records" routerLinkActive="active">Search</a>
     |
     <a routerLink="/records" routerLinkActive="active">Records</a>
     |
-    <a routerLink="/roles" routerLinkActive="active">Roles</a>
+    <a routerLink="/events" routerLinkActive="active">Events</a>
     |
-    <a routerLink="/users" routerLinkActive="active">Users</a>
+    <a routerLink="/categories" routerLinkActive="active">Categories</a>
   </nav>
 
 </div>
